# Imposteur

./: README.md
client/: CMakeLists.txt
client/src/: main.cpp
img/: helloworld.txt
server/: Makefile  imposteur_server
server/data/: words.csv
server/include/: color.h  config.h  game.h  player.h  utils.h
server/src/: game.c  imposteur_server.c  player.c  utils.c
